--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello finally</title>
+	<title>Hello</title>
 </head>
 <body>
-<h1>Isha welcome</h1>
+  <h1> Hi there </h1>
 </body>
 </html>
